<resources>
    <string name="app_name">NUMappx</string>
    <string name="title_home">HOME</string>
    <string name="title_favorite">FAV</string>
    <string name="your_country">Your Country</string>
    <string name="your_city">Your City</string>
    <string name="your_district">Your district</string>
    <string name="public_switch">Public</string>
    <string name="title_add">ADD</string>
    <string name="title_profile">PROFILE</string>
    <string name="private_switch">Private</string>
    <string name="name_textfield">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Number_text">Number</string>
    <string name="makkah">makkah</string>
    <string name="Saudi_Arabia">Saudi Arabia</string>
    <string name="Al_Awali">Al-Awali</string>
    <string name="card_info">Card info</string>


    <string name="btn_persistent">Persistent Bottom Sheet</string>
    <string name="btn_modal">Modal Bottom Sheet</string>
    <string name="tv_title">Learn Bottom Sheet</string>
    <string name="tv_description">
        A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
        some task in Android. Types of BottomSheet \n\nA BottomSheet is of two types: \n\nPersistent BottomSheet \n\nModal BottomSheet</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>


</resources>