<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wesam.numappx.fragments.home_fragments"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragments" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.wesam.numappx.fragments.favorite_fragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/favorite_fragment" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.wesam.numappx.fragments.add_fragment"
        android:label="@string/title_add"
        tools:layout="@layout/add_fragment" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.wesam.numappx.fragments.profile_fragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>