<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.add_fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#16FFC107"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/your_country"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/spinCountry"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_bg"
            android:dropDownWidth="300dp"
            android:popupBackground="@color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/your_city"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/spinCity"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_bg"
            android:dropDownWidth="300dp"
            android:popupBackground="@android:color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/your_district"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/spinDist"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_bg"
            android:dropDownWidth="300dp"
            android:paddingRight="14dp"
            android:popupBackground="@android:color/white" />

        <EditText
            android:id="@+id/et_NAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/name_textfield"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_NUMBER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:hint="@string/Number_text"
            android:inputType="phone" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPublic"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/public_switch" />

            <RadioButton
                android:id="@+id/radioPrivate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/private_switch" />
        </RadioGroup>

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/title_add" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>

